--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Heroes</a></li>
+            <li><a href="views/superheroes.html">Heroes</a></li>
             <li><a href="#">Jobs</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
