--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="views/superheroes.html">Heroes</a></li>
-            <li><a href="views/jobs.html">Jobs</a></li>
+            <li><a href="/views/superheroes.html">Heroes</a></li>
+            <li><a href="/views/jobs.html">Jobs</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
