--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="views/superheroes.html">Heroes</a></li>
-            <li><a href="views/jobs.html">Jobs</a></li>
+            <li><a href="#">Jobs</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
